--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -598,6 +598,16 @@ url={https://brailleinstitute.org/freefont},
   year         = {2018},
 }
 
+@Article{Bridges:1999:ConstructiveMathematics,
+  author   = {Douglas Bridges},
+  title    = {{Constructive Mathematics:} a foundation for computable analysis},
+  pages    = {95-109},
+  url      = {https://doi.org/10.1093/philmat/7.1.65},
+  volume   = {219},
+  journal  = {Theoretical COmputer Science},
+  year     = {1999},
+}
+
 @Article{BridgesReeves:1991:ConstructiveMathProgramming,
   author   = {Douglas Bridges and Steve Reeves},
   title    = {{Constructive Mathematics in Theory and Programming Practice}},
@@ -607,9 +617,17 @@ url={https://brailleinstitute.org/freefont},
   pages    = {65-104},
   url      = {https://doi.org/10.1093/philmat/7.1.65},
   volume   = {7},
-  abstract = {{The first part of the paper introduces the varieties of modern constructive mathematics, concentrating on Bishop's constructive mathematics (BISH). it gives a sketch of both Myhill's axiomatic system for BISH and a constructive axiomatic development of the real line R. The second part of the paper focusses on the relation between constructive mathematics and programming, with emphasis on Martin-L6f 's theory of types as a formal system for BISH.}},
+  abstract = {{The first part of the paper introduces 
+  the varieties of modern constructive mathematics, 
+  concentrating on Bishop's constructive mathematics (BISH). 
+  It gives a sketch of both Myhill's axiomatic system for BISH 
+  and a constructive axiomatic development of the real line R. 
+  The second part of the paper focusses on the relation 
+  between constructive mathematics and programming, 
+  with emphasis on Martin-L6f 's theory of types 
+  as a formal system for BISH.}},
   journal  = {Philosophia Mathematica},
-  year     = {1999},
+  year     = {1991},
 }
 
 @Book{BridgesRichman:1987:ConstructiveMathematics,
