--- a/tex/latex/PalisadesLakes/PalisadesLakes.sty
+++ b/tex/latex/PalisadesLakes/PalisadesLakes.sty
@@ -3060,15 +3060,15 @@ StylisticSet={
 % TODO: rationalize serif/sans/mono/fraktur/etc dimensions
 % TODO: \setBlackLetterFont?
 %-----------------------------------------------------------------
-% QTheidelbergType 
+% QTHeidelbergType 
 % https://ctan.org/pkg/qualitype
 % Version 2019-12-26
 % Licenses  GNU General Public License, version 2 or newer
 % The SIL Open Font License
 % Copyright 1992 Qualitype
 
-\NewDocumentCommand {\QTheidelbergBlackLetterFont} {} {
-\newfontfamily\BlackLetterFont{QTheidelbergType}[
+\NewDocumentCommand {\QTHeidelbergBlackLetterFont} {} {
+\newfontfamily\BlackLetterFont{QTHeidelbergType}[
 Path= c:/windows/fonts/ ,
 Extension=.otf,
 Ligatures={Common,TeX},
@@ -3711,7 +3711,7 @@ RawFeature={
  % Optima -> Classico -> Biolinum -> Libertinus Sans
 \LibertinusSansFont
 \FiraCodeMonoFont
-\QTheidelbergBlackLetterFont
+\QTHeidelbergBlackLetterFont
 \AsanaMathFont
 }
   
@@ -3719,7 +3719,7 @@ RawFeature={
 \CormorantMainFont
 \YsabeauSansFont
 \FiraCodeMonoFont
-\QTheidelbergBlackLetterFont
+\QTHeidelbergBlackLetterFont
 \GaramondMathFont
 }
 
@@ -3729,7 +3729,7 @@ RawFeature={
 %\GilliusADFTwoSansFont
 \AtkinsonHyperlegibleSansFont
 \FiraCodeMonoFont
-\QTheidelbergBlackLetterFont
+\QTHeidelbergBlackLetterFont
 \GaramondMathFont
 }
 
@@ -3737,7 +3737,7 @@ RawFeature={
 \ErewhonMainFont
 \LatinModernSansFont
 \FiraCodeMonoFont
-\QTheidelbergBlackLetterFont
+\QTHeidelbergBlackLetterFont
 \ErewhonMathFont
 }
 
@@ -3746,7 +3746,7 @@ RawFeature={
 \FiraGoMainFont
 \FiraGoSansFont
 \FiraCodeMonoFont
-\QTheidelbergBlackLetterFont
+\QTHeidelbergBlackLetterFont
 \FiraMathFont
 }
 
@@ -3760,7 +3760,7 @@ RawFeature={
 \GFSNeohellenicSansFont
 %% no GFS mono font?
 \FiraCodeMonoFont
-\QTheidelbergBlackLetterFont
+\QTHeidelbergBlackLetterFont
 \GFSNeohellenicMathFont
 }
 
@@ -3768,7 +3768,7 @@ RawFeature={
 \KpRomanMainFont
 \KpSansSansFont
 \KpMonoMonoFont
-\QTheidelbergBlackLetterFont
+\QTHeidelbergBlackLetterFont
 \KpMathMathFont
 }
 
@@ -3776,7 +3776,7 @@ RawFeature={
 \LatinModernMainFont
 \LatinModernSansFont
 \LatinModernMonoFont
-\QTheidelbergBlackLetterFont
+\QTHeidelbergBlackLetterFont
 \LatinModernMathFont
 }
 
@@ -3785,7 +3785,7 @@ RawFeature={
 \AtkinsonHyperlegibleSansFont
 \FiraCodeMonoFont
 \LegibleMathFont 
-\QTheidelbergBlackLetterFont
+\QTHeidelbergBlackLetterFont
 }
 \NewDocumentCommand {\LibertinusFonts} {} {
 % TODO: Libertinus Serif Display as title font?
@@ -3794,7 +3794,7 @@ RawFeature={
 \LibertinusSansFont
 \LibertinusMonoFont
 \LibertinusMathFont
-\QTheidelbergBlackLetterFont
+\QTHeidelbergBlackLetterFont
 }
 
 \NewDocumentCommand {\NewComputerModernFonts} {} {
@@ -3802,7 +3802,7 @@ RawFeature={
 \NewComputerModernSansFont
 \NewComputerModernMonoFont
 \NewComputerModernMathFont
-\QTheidelbergBlackLetterFont
+\QTHeidelbergBlackLetterFont
 }
 
 %-----------------------------------------------------------------
@@ -3816,7 +3816,7 @@ RawFeature={
 %\HerosCondensedSansFont
 \CursorMonoFont
 \BonumMathFont
-\QTheidelbergBlackLetterFont
+\QTHeidelbergBlackLetterFont
 }
 
 % ok: 
@@ -3827,7 +3827,7 @@ RawFeature={
 %\HerosCondensedSansFont
 \CursorMonoFont
 \PagellaMathFont
-\QTheidelbergBlackLetterFont
+\QTHeidelbergBlackLetterFont
 }
 
 % pagella > schola > bonum
@@ -3838,7 +3838,7 @@ RawFeature={
 %\HerosCondensedSansFont
 \CursorMonoFont
 \ScholaMathFont
-\QTheidelbergBlackLetterFont
+\QTHeidelbergBlackLetterFont
 }
 
 % termes ~ pagella > schola > bonum
@@ -3849,7 +3849,7 @@ RawFeature={
 %\HerosCondensedSansFont
 \CursorMonoFont
 \TermesMathFont
-\QTheidelbergBlackLetterFont
+\QTHeidelbergBlackLetterFont
 }
 
 %-----------------------------------------------------------------
@@ -3858,7 +3858,7 @@ RawFeature={
 \GilliusADFTwoSansFont
 \FiraCodeMonoFont
 \XITSMathFont
-\QTheidelbergBlackLetterFont
+\QTHeidelbergBlackLetterFont
 }
 
 \NewDocumentCommand {\STIXTwoFonts} {} {
@@ -3866,7 +3866,7 @@ RawFeature={
 \GilliusADFTwoSansFont
 \FiraCodeMonoFont
 \STIXTwoMathFont
-\QTheidelbergBlackLetterFont
+\QTHeidelbergBlackLetterFont
 }
 %-----------------------------------------------------------------
 % main fonts
