--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -1831,6 +1831,19 @@ url={https://www.fontlab.com/},
   year      = {2004},
 }
 
+@book{GoldbergRobson:1983:Smalltalk80,
+  author = {Goldberg, Adele and Robson, David},
+  title = {Smalltalk-80: The Language and its Implementation},
+  year = 1983,
+  url={https://dl.acm.org/doi/book/10.5555/273}}
+
+@book{Goldberg:1984:Smalltalk80IPE,
+author = {Goldberg, Adele},
+title = {Smalltalk-80:  The Interactive Programming Environment},
+year = {1984},
+url={https://dl.acm.org/doi/book/10.5555/925}}
+
+
 @Book{Goldblatt:1984:Topoi,
   author    = {Robert Goldblatt},
   title     = {Topoi --- the categorial analysis of logic},
@@ -2604,6 +2617,12 @@ url={http://www.tug.org/TUGboat/tb10-1/tb23knut.pdf},
   which I think depends on context and how well formatted
   the two expressions are.},
 }
+
+@book{Krasner:1983:Smalltalk80History,
+author = {Krasner, Glenn},
+title = {Smalltalk-80:  Bits of History, Words of Advice},
+year = {1983},
+url={https://dl.acm.org/doi/10.5555/226}}
 
 @book{Kraus:1991:BrushesWithPower,
 author={Kraus, Richard Curt},
