integer multiplication references

--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -429,6 +429,24 @@ publisher = "BIS Publishers",
   year    = {1988},
 }
 
+@article{Bezanson:2017:Julia,
+  title={Julia: A fresh approach to numerical computing},
+  author={Bezanson, Jeff and Edelman, Alan and Karpinski, Stefan and Shah, Viral B},
+  journal={SIAM Review},
+  volume={59},
+  number={1},
+  pages={65--98},
+  year={2017},
+  publisher={SIAM},
+  doi={https://doi.org/10.1137/141000671},
+  url={https://julialang.org}}
+
+@online{BigInteger.multiply:2021,
+author={{OpenJDK community}},
+title={{OpenJDK 17 General access: java.math.BigInteger.multiply}},
+year={2021},
+url={https://github.com/openjdk/jdk/blob/dfacda488bfbe2e11e8d607a6d08527710286982/src/java.base/share/classes/java/math/BigInteger.java#L1587-L1684}}
+
 @TechReport{BillLundellMcDonald:1992:Brick,
   author      = {Thomas Bill and Bertil Lundell and John Alan McDonald},
   institution = {Dept. of Statistics, U. of Washington},
@@ -5447,6 +5465,16 @@ url={http://www.ams.org/arc/styleguide/mit-2.pdf},
   url    = {https://en.wikipedia.org/w/index.php?title=Synthetic_division},
 }
 
+@online{wiki:ToomCook,
+author = "{Wikipedia}",
+title = "Toom–Cook multiplication",
+url = {https://en.wikipedia.org/w/index.php?title=Toom-Cook_multiplication}  }
+
+@online{wiki:Karatsuba,
+    author = "{Wikipedia}",
+    title = "Karatsuba algorithm",
+    url = {https://en.wikipedia.org/w/index.php?title=Karatsuba_algorithm} }
+        
 @Online{wiki:AxiomOfChoice,
   author = {Wikipedia},
   title  = {Axiom of choice},
