integer multiply refs; spelling

--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -5465,16 +5465,21 @@ url={http://www.ams.org/arc/styleguide/mit-2.pdf},
   url    = {https://en.wikipedia.org/w/index.php?title=Synthetic_division},
 }
 
-@online{wiki:ToomCook,
+@online{wiki:GradeSchoolMultiplication,
+    author = "{Wikipedia}",
+    title = "Multiplication algorithm",
+    url ={https://en.wikipedia.org/wiki/Multiplication_algorithm#Long_multiplication} }
+            
+@online{wiki:ToomCookMultiplication,
 author = "{Wikipedia}",
 title = "Toom–Cook multiplication",
-url = {https://en.wikipedia.org/w/index.php?title=Toom-Cook_multiplication}  }
+url = {https://en.wikipedia.org/w/index.php?title=Toom-Cook_multiplication} }
 
-@online{wiki:Karatsuba,
+@online{wiki:KaratsubaMultiplication,
     author = "{Wikipedia}",
     title = "Karatsuba algorithm",
     url = {https://en.wikipedia.org/w/index.php?title=Karatsuba_algorithm} }
-        
+    
 @Online{wiki:AxiomOfChoice,
   author = {Wikipedia},
   title  = {Axiom of choice},
