--- a/shared/algebra.tex
+++ b/shared/algebra.tex
@@ -17,7 +17,7 @@ BWilliams:SemiringsAndPredicates}
 consists of:
 \begin{itemize}
   \item A primary set --- the \textit{elements} of the structure.
-  \item zero or a few auxilliary sets.
+  \item zero or a few auxiliary sets.
   \item functions (called \textit{operations})
 that take a small number of arguments from one or more of the sets
 and return elements of the sets.
