more integer multiply refs

--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -5480,6 +5480,35 @@ url = {https://en.wikipedia.org/w/index.php?title=Toom-Cook_multiplication} }
     title = "Karatsuba algorithm",
     url = {https://en.wikipedia.org/w/index.php?title=Karatsuba_algorithm} }
     
+@online{ wiki:SchonhageStrassenMultiplication,
+    author = "{Wikipedia}",
+    title = {Schönhage–Strassen algorithm},
+    url = {https://en.wikipedia.org/w/index.php?title=Sch%C3%B6nhage%E2%80%93Strassen_algorithm&oldid=1049388661} }
+
+@online{ wiki:FurerMultiplication,
+    author = "{Wikipedia}",
+    title = {Fürer's algorithm},
+    url = {https://en.wikipedia.org/w/index.php?title=F%C3%BCrer%27s_algorithm&oldid=1046488910}}
+
+@article{Hartnett:2019:NLogNIntegerMultiplication,
+author={Kevin Hartnett},
+title= {Mathematicians Discover the Perfect Way to Multiply},
+journal={Quanta Magazine},
+year={2019},
+url={https://www.quantamagazine.org/mathematicians-discover-the-perfect-way-to-multiply-20190411/#} }
+
+@article{HarveyVanDerHoeven:2020:NLogNIntegerMultiplication,
+  TITLE = {{Integer multiplication in time O(n log n)}},
+  AUTHOR = {Harvey, David and Van Der Hoeven, Joris},
+  URL = {https://hal.archives-ouvertes.fr/hal-02070778},
+  JOURNAL = {{Annals of Mathematics}},
+  PUBLISHER = {{Princeton University, Department of Mathematics}},
+  YEAR = {2020},
+  PDF = {https://hal.archives-ouvertes.fr/hal-02070778v2/file/nlogn.pdf},
+  HAL_ID = {hal-02070778},
+  HAL_VERSION = {v2},
+}
+  
 @Online{wiki:AxiomOfChoice,
   author = {Wikipedia},
   title  = {Axiom of choice},
