--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -1,6 +1,7 @@
 % Encoding: UTF-8
+%
 % General principle is "less is more"; only include what's known
-% to be relevant. 
+% to be relevant.
 %
 % Assuming biblatex: online rather than misc, etc.
 %
@@ -68,50 +69,44 @@ url={https://www.gnu.org/software/mit-scheme/},
 }
 
 @online{Hanson:2011:MITSchemeSOS,
-title={{The SOS Reference Manual
-Edition 2.13 for SOS 1.9}},
+title={{The SOS Reference Manual Edition 2.13 for SOS 1.9}},
 year={2011},
-month=10},
+month={10},
 day={14},
 author={Chris Hanson},
-url={https://www.gnu.org/software/mit-scheme/},
-}
+url={https://www.gnu.org/software/mit-scheme/} }
 
 @online{Birkholz:2018:MITSchemeSOS,
 title={{The FFI Reference Manual
 a Foreign Function Interface (version 1.0)
 for MIT/GNU Scheme version 9.0.1}},
 year={2018},
-month=6},
+month={6},
 day={10},
 author={Matt Birkholz},
-url={https://www.gnu.org/software/mit-scheme/},
-}
+url={https://www.gnu.org/software/mit-scheme/} }
 
 @Online{JavaCompilerAPI:2006,
   author = {Peter {von der Ahe}},
   title  = {JSR 199: Java Compiler API},
   url    = {http://www.jcp.org/en/jsr/detail?id=199},
-  year   = {2006},
-}
+  year   = {2006}}
 
 @InCollection{sep:LambdaCalculus,
-  author       = {Alama, Jesse and Korbmacher, Johannes},
-  booktitle    = {The Stanford Encyclopedia of Philosophy},
-  title        = {The Lambda Calculus},
-  edition      = {Spring 2019},
-  editor       = {Edward N. Zalta},
-  publisher    = {Metaphysics Research Lab, Stanford Un},
-  howpublished = {\url{https://plato.stanford.edu/archives/spr2019/entries/lambda-calculus/}},
-  year         = {2019},
-}
+author={Alama, Jesse and Korbmacher, Johannes},
+booktitle={The Stanford Encyclopedia of Philosophy},
+title={The Lambda Calculus},
+edition={Spring 2019},
+editor={Edward N. Zalta},
+publisher={Metaphysics Research Lab, Stanford},
+url={https://plato.stanford.edu/archives/spr2019/entries/lambda-calculus/},
+year={2019} }
 
 @Online{Allen:2012:Self,
   author = {Russell Allen},
-  title  = {Self - the power of simplicity},
+  title  = {Self -- the power of simplicity},
   url    = {http://selflanguage.org},
-  year   = {2012},
-}
+  year   = {2012}}
 
 @Article{AllgowerSchimdt:1985,
   author  = {E. L. Allgower and P. H. Schmidt},
@@ -119,8 +114,7 @@ url={https://www.gnu.org/software/mit-scheme/},
   pages   = {322--346},
   volume  = {22},
   journal = {{SIAM} Journal of Numerical Analysis},
-  year    = {1985},
-}
+  year    = {1985}}
 
 @Book{AlmirayFerrin:2011:GriffonInAction,
   author    = {Anders Almiray and Danno Ferrin},
