more refs; modify use of datetime latex package

--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -1935,6 +1935,13 @@ year={2021},
 url={https://docs.oracle.com/javase/specs/},
 }
 
+@book{Oracle:2021:JDK17,
+title = {{JDK 17 Documentation}},
+author={{Oracle}},
+year={2021},
+url={https://docs.oracle.com/en/java/javase/17/},
+}
+
 @InCollection{Griewank:1989,
   author    = {A. Griewank},
   booktitle = {Mathematical Programming: recent developments and applications},
@@ -5376,6 +5383,12 @@ url={http://www.ams.org/arc/styleguide/mit-2.pdf},
   url    = {https://en.wikipedia.org/wiki/Fr%C3%A9chet_derivative},
 }
 
+ @online{ wiki:GalacticAlgorithm,
+    author = {Wikipedia},
+    title = {Galactic algorithm},
+    url = {https://en.wikipedia.org/w/index.php?title=Galactic_algorithm},
+  }
+  
 @Online{wiki:Interpolation,
   author = {Wikipedia},
   title  = {Interpolation},
@@ -5476,12 +5489,18 @@ url = {https://en.wikipedia.org/w/index.php?title=Toom-Cook_multiplication} }
 @online{ wiki:SchonhageStrassenMultiplication,
     author = "{Wikipedia}",
     title = {Schönhage–Strassen algorithm},
-    url = {https://en.wikipedia.org/w/index.php?title=Sch%C3%B6nhage%E2%80%93Strassen_algorithm&oldid=1049388661} }
+    url = {https://en.wikipedia.org/w/index.php?title=Sch%C3%B6nhage%E2%80%93Strassen_algorithm} }
+
+@online{tbuktu:2015:EfficientBigIntegerImplementation,
+    author = {Tim Buktu},
+    title = {Efficient BigInteger Implementation},
+    year={2015},
+    url = https://github.com/tbuktu/bigint} }
 
 @online{ wiki:FurerMultiplication,
     author = "{Wikipedia}",
     title = {Fürer's algorithm},
-    url = {https://en.wikipedia.org/w/index.php?title=F%C3%BCrer%27s_algorithm&oldid=1046488910}}
+    url = {https://en.wikipedia.org/w/index.php?title=F%C3%BCrer%27s_algorithm}}
 
 @article{Hartnett:2019:NLogNIntegerMultiplication,
 author={Kevin Hartnett},
