typo in bib file

--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -5495,7 +5495,7 @@ url = {https://en.wikipedia.org/w/index.php?title=Toom-Cook_multiplication} }
     author = {Tim Buktu},
     title = {Efficient BigInteger Implementation},
     year={2015},
-    url = https://github.com/tbuktu/bigint} }
+    url = {https://github.com/tbuktu/bigint} }
 
 @online{ wiki:FurerMultiplication,
     author = "{Wikipedia}",
