new bibs, font updates

--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -30,6 +30,13 @@
   year      = {1996},
 }
 
+@book{Aberth:2001:ComputableCalculus,
+  title={Computable Calculus},
+  author={Oliver Aberth},
+  year={2001},
+  publisher={Academic Press}
+}
+
 @Book{AdamekHerrlichStrecker:1990,
   author    = {Ji\v{r}\'{\i} Ad\'{a}mek and Horst Herrlich and George Strecker},
   title     = {Abstract and Concrete Categories},
@@ -564,6 +571,19 @@ title={Atkinson Hyperlegible Font},
 url={https://brailleinstitute.org/freefont},
 }
 
+@incollection{BratkaHertlingWeihrauch:2008:TutorialComputableAnalysis,
+title = {A Tutorial on Computable Analysis},
+author = {Vasco Brattka and Peter Hertling
+and Klaus Weihrauch},
+booktitle = {New Computational Paradigms:
+Changing Conceptions of What is Computable},
+editor = {{S. Barry} Cooper
+ and Benedikt L\"{o}we
+ and Andrea Sorbi},
+year = {2008},
+publisher = {Springer},
+}
+
 @Article{Brent:1978:FMA,
   author     = {Brent, Richard P.},
   title      = {A Fortran Multiple-Precision Arithmetic Package},
@@ -616,7 +636,7 @@ url={https://brailleinstitute.org/freefont},
   pages    = {95-109},
   url      = {https://doi.org/10.1093/philmat/7.1.65},
   volume   = {219},
-  journal  = {Theoretical COmputer Science},
+  journal  = {Theoretical Computer Science},
   year     = {1999},
 }
 
@@ -814,7 +834,10 @@ suggested by our theoretical results.},
 }
 
 @Online{CeredaEtAl:2021:Arara,
-  author = {{Paulo Roberto Massa} Cereda and Marco Daniel and Brent Longborough and {Nicola Louise Cecilia} Talbot},
+  author = {{Paulo Roberto Massa} Cereda
+  and Marco Daniel
+  and Brent Longborough
+  and {Nicola Louise Cecilia} Talbot},
   title  = {\texttt{arara}: The cool {\TeX} automation tool.},
   url    = {https://github.com/cereda/arara},
   year   = {2012},
@@ -5124,6 +5147,13 @@ url={http://www.ams.org/arc/styleguide/mit-2.pdf},
   volume  = {5},
   journal = {{IEEE} {CG\&A}},
   year    = {1985},
+}
+
+@book{Weihrauch:2000:ComputableAnalysis,
+author = {Klaus Weihrauch},
+title = {Computable Analysis: An Introduction},
+year = {2000},
+publisher = {Springer}
 }
 
 @Online{Weka3:2005,
