--- a/tex/latex/PalisadesLakes/PalisadesLakes.sty
+++ b/tex/latex/PalisadesLakes/PalisadesLakes.sty
@@ -250,7 +250,7 @@ nabla=upright,
 % atkinson-hyperlegible
 %-----------------------------------------------------------------
 % https://github.com/googlefonts/atkinson-hyperlegible/
-% initial commot 2021-03-10
+% version: VM final adjustment 2021-04-29
 % OFL-1.1 License
 
 \NewDocumentCommand {\AtkinsonHyperlegibleMainFont} {} {
@@ -327,6 +327,7 @@ RawFeature={
 % This isn't legal advice, please consider consulting a lawyer 
 % and see the full license for all details.
 % https://fonts.google.com/specimen/Cormorant?preview.text_type=custom#license
+% version commit 83c64a4 2023-01-08
 
 % CormorantGaramond, CormorantInfant, CormorantSC,...?
 
@@ -514,6 +515,7 @@ RawFeature={
 % https://github.com/octaviopardo/EBGaramond12
 % OFL-1.1 License
 % 2021-02-18
+% version octaviopardo Merge pull request #40 from aaronbell/master e608414 on Sep 29, 2021
 
 \NewDocumentCommand {\EBGaramondPardoMainFont} {} {
 \setmainfont{EBGaramond}[
@@ -661,6 +663,7 @@ Numbers={OldStyle,Proportional},
 % https://ctan.org/pkg/erewhon
 % OFL-1.1 License
 % Version 1.114 2021-02-26
+% version 1.12 2022-05-15
 % Licenses  The SIL Open Font License
 % The LATEX Project Public License 1.3
 
@@ -815,7 +818,7 @@ RawFeature={
 % https://github.com/dbenjaminmiller/garamond-libre
 % https://dbmiller.org/type/garamond-libre.html
 % https://ctan.org/pkg/garamond-libre
-% Version 1.4 2020-05-03
+% Version	1.4 2022-09-16
 % Licenses  MIT License
 % Copyright 2019–2020 Daniel Benjamin Miller
 
@@ -1104,7 +1107,7 @@ RawFeature={
 % Version 0.34 2021-01-30
 % Licenses  The LATEX Project Public License 1.3
 % The SIL Open Font License
-% Possiblly a harmonius set to use for all fonts
+% Possibly a harmonious set to use for all fonts
 % version 7.040 2021-03-01
 
 \NewDocumentCommand {\KpRomanMainFont} {} {
@@ -1181,6 +1184,7 @@ RawFeature={
 % Version 2.004
 % Licenses  The GUST Font License (GFL)
 % 2009-10-30
+% Version 2.005 2022-05-22
 
 % TODO: 8, 9, 10, 12 ,17 size fonts for differing faces?
 
@@ -1253,7 +1257,7 @@ RawFeature={
 %-----------------------------------------------------------------
 % https://github.com/alerque/libertinus
 % OFL-1.1 License
-% Possiblly a harmonius set to use for all fonts
+% Possibly a harmonious set to use for all fonts
 % version 7.040 2021-03-01
 
 \NewDocumentCommand {\LibertinusMainFont} {} {
@@ -1316,7 +1320,8 @@ RawFeature={
 %-----------------------------------------------------------------
 % NewComputerModern
 % https://ctan.org/pkg/newcomputermodern
-%   The GUST Font License (GFL)
+% The GUST Font License (GFL)
+% Version 4.7 2023-10-17
 
 % No bold small caps as of 2021-02-24
 \NewDocumentCommand {\NewComputerModernMainFont} {} {
@@ -1381,6 +1386,7 @@ RawFeature={
 % STIX fonts are available for download at 
 % https://github.com/stipub/stixfonts 
 % and distributed under the SIL Open Font License, Version 1.1
+% Version STIX Two v2.13 b171 2021-05-23
 
 \NewDocumentCommand {\STIXTwoMainFont} {} {
 \setmainfont{STIXTwoText}[
@@ -1687,6 +1693,7 @@ StylisticSet={
 % Times-like, accompanying math font
 % Open Font License, version 1.1.
 % https://github.com/alif-type/xits
+% Version 1.302 2020-07-02
 
 \NewDocumentCommand {\XITSMainFont} {} {
 \setmainfont{XITS}[
@@ -1748,7 +1755,7 @@ Numbers={OldStyle,Proportional},
 % atkinson-hyperlegible
 %-----------------------------------------------------------------
 % https://github.com/googlefonts/atkinson-hyperlegible/
-% initial commot 2021-03-10
+% initial commit 2021-03-10
 % OFL-1.1 License
 
 \NewDocumentCommand {\AtkinsonHyperlegibleSansFont} {} {
@@ -1901,6 +1908,7 @@ RawFeature={
 % https://greekfontsociety-gfs.gr/typefaces/20th_21st_century#GFS_NeoHellenic
 % OFL-1.1 License
 % downloaded 2021-03-03
+% version 2022-09-05
 
 % Effectively a sans font --- what to do when sans 
 % and main are the same?
@@ -2472,6 +2480,7 @@ StylisticSet={
 %-----------------------------------------------------------------
 % https://ctan.org/pkg/kpfonts-otf
 % Version 0.34 2021-01-30
+% Version 0.56 2023-08-04
 % Licenses  The LATEX Project Public License 1.3
 % The SIL Open Font License
 % Possiblly a harmonius set to use for all fonts
@@ -2550,6 +2559,7 @@ RawFeature={
 % OFL-1.1 License
 % YsabeautInfant, YsabeauOffice, YsabeauSC,...?
 % TODO: Ysabeau In progress --- better alternative?
+% Version 2023-06-14
 
 \NewDocumentCommand {\YsabeauSansFont} {} {
 \setsansfont{Ysabeau}[
@@ -2568,35 +2578,31 @@ BoldSlantedFont=*-BoldItalic,
 FontFace={ul}{sc}{*SC-Thin},
 FontFace={el}{sc}{*SC-Extralight},
 FontFace={l}{sc}{*SC-Light},
-FontFace={sl}{sc}{*SC-Semilight},
-%FontFace={m}{sc}{*SC-Book},
-FontFace={m}{sc}{*SC-Regular},
-%FontFace={m}{sc}{*SC-Medium},
+FontFace={sl}{sc}{*SC-Regular},
+FontFace={m}{sc}{*SC-Medium},
 FontFace={sb}{sc}{*SC-Semibold},
 FontFace={b}{sc}{*SC-Bold},
-FontFace={eb}{sc}{*SC-Ultrabold},
-FontFace={ub}{sc}{*SC-Heavy},
-%FontFace={ub}{sc}{*SC-Black},
+FontFace={eb}{sc}{*SC-ExtraBold},
+FontFace={ub}{sc}{*SC-Black},
 %
 %FontFace={ul}{n}{*-Hairline},
 FontFace={ul}{n}{*-Thin},
 FontFace={el}{n}{*-Extralight},
 FontFace={l}{n}{*-Light},
-FontFace={sl}{n}{*-Semilight},
+FontFace={sl}{n}{*-Light},
 %FontFace={m}{n}{*-Book},
 FontFace={m}{n}{*-Regular},
 %FontFace={m}{n}{*-Medium},
 FontFace={sb}{n}{*-Semibold},
 FontFace={b}{n}{*-Bold},
-FontFace={eb}{n}{*-Ultrabold},
-FontFace={ub}{n}{*-Heavy},
-%FontFace={ub}{n}{*-Black},
+FontFace={eb}{n}{*-Black},
+FontFace={ub}{n}{*-Black},
 %
 %FontFace={ul}{it}{*-HairlineItalic},
 FontFace={ul}{it}{*-ThinItalic},
 FontFace={el}{it}{*-ExtralightItalic},
 FontFace={l}{it}{*-LightItalic},
-FontFace={sl}{it}{*-SemilightItalic},
+FontFace={sl}{it}{*-LightItalic},
 FontFace={m}{it}{*-Italic},
 %FontFace={m}{it}{*-MediumItalic},
 FontFace={sb}{it}{*-SemiboldItalic},
@@ -2608,7 +2614,7 @@ FontFace={ub}{it}{*-BoldItalic},
 FontFace={ul}{sl}{*-ThinItalic},
 FontFace={el}{sl}{*-ExtralightItalic},
 FontFace={l}{sl}{*-LightItalic},
-FontFace={sl}{sl}{*-SemilightItalic},
+FontFace={sl}{sl}{*-lightItalic},
 FontFace={m}{sl}{*-Italic},
 %FontFace={m}{sl}{*-MediumItalic},
 FontFace={sb}{sl}{*-SemiboldItalic},
@@ -2650,7 +2656,7 @@ RawFeature={+zero}, % slashed (actually dotted) zero
 % Fira Code <- Fira Mono <- Metal
 % https://github.com/tonsky/FiraCode
 % OFL-1.1 License
-% 5.2 Jun 12, 2020
+% 6.2 2021-12-06
 
 % \usepackage{fontspec}
 % \setmonofont{FiraCode-Regular.otf}[
@@ -3148,10 +3154,12 @@ range={\mathhyphen,},]
 }
 %-----------------------------------------------------------------
 % Erewhon Math  <- Heuristica <- Utopia
-% https://ctan.org/pkg/erewhon% OFL-1.1 License
+% https://ctan.org/pkg/erewhon
+% OFL-1.1 License
 % Version 1.114 2021-02-26
 % Licenses  The SIL Open Font License
 % The LATEX Project Public License 1.3
+% Version 0.63 2023-07-20
 
 \NewDocumentCommand {\ErewhonMathFont} {} {
 \setmathfont{Erewhon-Math.otf}[
@@ -3169,7 +3177,8 @@ Numbers={OldStyle,Proportional},
 
 %-----------------------------------------------------------------
 % FiraMath <- FiraSans <- Metal
-% https://github.com/bBoxType/FiraGO
+% https://github.com/firamath/firamath
+% https://www.ctan.org/pkg/firamath-otf
 % OFL-1.1 License
 % FiraMath v0.3.4 Oct 15, 2020
 
@@ -3220,6 +3229,7 @@ Numbers={OldStyle,Proportional},
 % https://greekfontsociety-gfs.gr/typefaces/Math
 % OFL 1.1
 % no version, downloaded 2021-03-03
+% version 1.02, downloaded 2023-10-19
 
 \NewDocumentCommand {\GFSNeohellenicMathFont} {} {
 \setmathfont{GFSNeohellenicMath.otf}[
@@ -4257,6 +4267,10 @@ isbn=false,
 backref=true,
 ]{biblatex}[2020/08/23]
 
+% vertical space between entries in bibliography
+% https://tex.stackexchange.com/questions/19105/how-can-i-put-more-space-between-bibliography-entries-biblatex
+\setlength\bibitemsep{0.5\baselineskip}
+
 \renewcommand\mkbibnamefamily[1]{\textsc{#1}}
 
 \DeclareFieldFormat{title}{\textmd{#1}}
@@ -4363,9 +4377,9 @@ backref=true,
 %\newfontfamily\titlefont[Scale=MatchUppercase]{Gill Sans MT}
 %\renewcommand{\maketitlehooka}{\titlefont}
 \pretitle{\begin{flushleft}\Huge\mdseries\scshape}
-\posttitle{\par\end{flushleft}\vskip 0.25em}
+\posttitle{\par\end{flushleft}\vskip 0.5em}
 \preauthor{\begin{flushleft}\scshape\mdseries}
-\postauthor{\par\end{flushleft}}
+\postauthor{\par\end{flushleft}\vskip 0.5em}
 \predate{\begin{flushleft}\scshape\mdseries}
 \postdate{\par\end{flushleft}}
 \setlength{\droptitle}{-80pt}
