new refs,smaller \geomHalfD

--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -1597,6 +1597,25 @@ for constructive, predicative and classical analysis.},
   year      = {2000},
 }
 
+@InCollection{Feferman:2013:AroundAndAbout,
+  author    = {Solomon Feferman},
+  title     = {Around and about computing over the reals},
+  booktitle = {Computability: Turing, G\"{o}del, Church, and beyond},
+  editor    = {B. J. Copeland and C. J. Posey and O. Shagrir},
+  pages     = {55 - 76},
+  publisher = {MIT Press},
+  year      = {2013},
+}
+
+@InCollection{Feferman:2015:ThesesAbstractStructure,
+  author    = {Solomon Feferman},
+  title     = {Theses for computation and recursion on abstract structure},
+  booktitle = {Computability: Turing, G\"{o}del, Church, and beyond},
+  editor    = {G. Sommaruga and T. Stram},
+  publisher = {Birkhauser/Springer},
+  year      = {2015},
+}
+
 @Article{Ferreiros2001RoadModernLogic,
   author  = {Jos\'{e} Ferreir\'{o}s},
   title   = {The Road to Modern Logic-An Interpretation},
@@ -6003,6 +6022,11 @@ url={https://www.quantamagazine.org/mathematicians-discover-the-perfect-way-to-m
   author = {Wikipedia},
   title  = {Peano axioms},
   url    = {https://en.wikipedia.org/w/index.php?title=Peano_axioms},
+}
+@Online{wiki:ReverseMathematics,
+  author = {Wikipedia},
+  title  = {Reverse Mathematics},
+  url    = {https://en.wikipedia.org/wiki/Reverse_mathematics},
 }
 
 @Online{wiki:HomogeneousSpace,
