new refs, a few symbols

--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -4698,6 +4698,15 @@ note = { Transcript at
   year    = {1987},
 }
 
+@book{Simpson:2009:Subsystems,
+  edition={2},
+  series={Perspectives in Logic},
+  title={Subsystems of Second Order Arithmetic},
+  publisher={Cambridge University Press},
+  author={Simpson, Stephen G.},
+  year={2009},
+}
+
 @online{SiskindPearlmutter:2005:PerturbationConfusion,
 title={Perturbation Confusion and Referential
 Transparency:
@@ -6027,6 +6036,12 @@ url={https://www.quantamagazine.org/mathematicians-discover-the-perfect-way-to-m
   author = {Wikipedia},
   title  = {Reverse Mathematics},
   url    = {https://en.wikipedia.org/wiki/Reverse_mathematics},
+}
+
+@Online{wiki:RobinsonArithmetic,
+  author = {Wikipedia},
+  title  = {Robinson Arithmetic},
+  url    = {https://en.wikipedia.org/wiki/Robinson_arithmetic},
 }
 
 @Online{wiki:HomogeneousSpace,
