new refs, modify macros

--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -5961,6 +5961,18 @@ url={https://www.quantamagazine.org/mathematicians-discover-the-perfect-way-to-m
   url    = {https://en.wikipedia.org/w/index.php?title=Abstract_nonsense},
 }
 
+@Online{wiki:ArithmeticalHierarchy,
+  author = {Wikipedia},
+  title  = {Arithmetical Hierarchy},
+  url    = {https://en.wikipedia.org/w/index.php?title=Arithmetical_hierarchy},
+}
+
+@Online{wiki:BoundedQuantifier,
+  author = {Wikipedia},
+  title  = {Bounded Quantifier},
+  url    = {https://en.wikipedia.org/wiki/Bounded_quantifier},
+}
+
 @Online{wiki:ConcreteCategory,
   author = {Wikipedia},
   title  = {Concrete category},
@@ -6007,6 +6019,12 @@ url={https://www.quantamagazine.org/mathematicians-discover-the-perfect-way-to-m
   author = {Wikipedia},
   title  = {Hilbert's paradox of the Grand Hotel},
   url    = {https://en.wikipedia.org/w/index.php?title=Hilbert\%27s_paradox_of_the_Grand_Hotel},
+}
+
+@Online{wiki:Induction,
+  author = {Wikipedia},
+  title  = {Induction, bounding and least number principles},
+  url    = {https://en.wikipedia.org/wiki/Induction,_bounding_and_least_number_principles},
 }
 
 @Online{wiki:ListOfFirstOrderTheories,
