--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -1243,6 +1243,15 @@ url={https://vimeo.com/515592681},
   year     = {1978},
 }
 
+@Article{Dorling:1996:Area,
+title={Area cartograms: their use and creation},
+author={Dorling, Daniel},
+journal={Concepts and Techniques in Modern Geography (CATMOG)},
+year={1996},
+url = {https://www.dannydorling.org/?page_id=1448},
+publisher={Univ. of East Anglia}
+}
+
 @Book{Dugac:1976:DedekindFondements,
   author    = {Dugac, P},
   title     = {Richard Dedekind et les fondements des math{\'e}matiques: avec de nombreux textes in{\'e}dits},
@@ -1778,6 +1787,45 @@ url={https://www.fontlab.com/},
   title  = {{clj-ml}},
   url    = {http://antoniogarrote.github.com/clj-ml/},
   year   = {2012},
+}
+
+@article{GastnerSeguyMore:2018:FastFlow,
+  author = {Michael T. Gastner  and Vivien Seguy  and Pratyush More },
+  title = {Fast flow-based algorithm for creating density-equalizing map projections},
+  journal = {Proceedings of the National Academy of Sciences},
+  volume = {115},
+  number = {10},
+  pages = {E2156-E2164},
+  year = {2018},
+  URL = {https://www.pnas.org/doi/abs/10.1073/pnas.1712674115},
+  abstract = {Cartograms are maps that rescale geographic regions (e.g., countries, districts)
+  such that their areas are proportional to quantitative demographic data
+  (e.g., population size, gross domestic product).
+  Unlike conventional bar or pie charts, cartograms can represent correctly
+  which regions share common borders, resulting in insightful visualizations
+  that can be the basis for further spatial statistical analysis.
+  Computer programs can assist data scientists in preparing cartograms,
+  but developing an algorithm that can quickly transform every coordinate on the map
+  (including points that are not exactly on a border) while generating recognizable images has remained a challenge.
+  Methods that translate the cartographic deformations into physics-inspired equations of motion have become popular,
+  but solving these equations with sufficient accuracy can still take several minutes on current hardware.
+  Here we introduce a flow-based algorithm whose equations of motion
+  are numerically easier to solve compared with previous methods.
+  The equations allow straightforward parallelization so that the calculation
+  takes only a few seconds even for complex and detailed input.
+  Despite the speedup, the proposed algorithm still keeps the advantages of previous techniques:
+  With comparable quantitative measures of shape distortion, it accurately scales all areas,
+  correctly fits the regions together, and generates a map projection for every point.
+  We demonstrate the use of our algorithm with applications to the 2016 US election results,
+  the gross domestic products of Indian states and Chinese provinces,
+  and the spatial distribution of deaths in the London borough of Kensington and Chelsea between 2011 and 2014.}}
+
+@Online{GastnerMiajiSinghania:2022:Pycnophylactic,
+  title={Smooth Pycnophylactic Interpolation Produced by Density-Equalising Map Projections},
+  author={Gastner, Michael T. and Miaji, Nihal Z. and Singhania, Adi},
+  year={2022},
+  month=jul,
+url = {https://arxiv.org/abs/2207.00663}
 }
 
 @Article{GentlemanIhaka:2000:Lexical,
@@ -4007,6 +4055,14 @@ author = {Gerrit Noordzij and Robin Kinross},
   year      = {1992},
 }
 
+@Online{NusratKobourov:2016:StateArtCartograms,
+  title={The State of the Art in Cartograms},
+  author={Sabrina Nusrat and Stephen Kobourov},
+  year={2016},
+  month=sep,
+  url = {https://arxiv.org/abs/1605.08485}
+}
+
 @Book{DutilhNovaes:2012:FormalLanguages,
   author    = {Catarina {Dutilh-Novaes}},
   title     = {Formal Languages in Logic: A Philosophical and Cognitive Analysis},
@@ -4671,6 +4727,16 @@ note = { Transcript at
   year      = {1992},
 }
 
+@Online{ShiEtAl:2020:CartogramGodPractices,
+  author       = {Tingsheng Shi and
+                  Ian K. Duncan and
+                  Yen{-}Ning Chang and
+                  Michael T. Gastner},
+  title        = {Motivating Good Practices for the Creation of Contiguous Area Cartograms},
+  year         = {2020},
+  url          = {https://arxiv.org/abs/2006.00285},
+}
+
 @Online{Shulman:2008:SetThForCatTh,
   author        = {Michael A. Shulman},
   title         = {Set theory for category theory},
@@ -5165,6 +5231,13 @@ url={http://www.ams.org/arc/styleguide/mit-2.pdf},
   institution = {Mathematical Sciences Department, {IBM} Thomas J. Watson Research Center},
   title       = {The {Scratchpad II} Type System: Domains and Subdomains},
   year        = {1989},
+}
+
+@Online{WeiEtAl:2023:ElasticCircularCartograms,
+  title={Circular cartograms via the elastic beam algorithm originated from cartographic generalization},
+  author={Wei, Zhiwei and Ding, Su and X, Wenjia and Cheng, Lu and Zhang, Song and Wang, Yang},
+  year={2023},
+  url = {https://arxiv.org/abs/2204.12645}
 }
 
 @Article{Weiler:1985:EdgeBasedDataStr,
@@ -5973,6 +6046,13 @@ url={https://www.quantamagazine.org/mathematicians-discover-the-perfect-way-to-m
   url    = {https://en.wikipedia.org/wiki/Bounded_quantifier},
 }
 
+@Online{ wiki:Cartogram,
+  author = "{Wikipedia}",
+  title = "Cartogram",
+  year = "2024",
+  url = {https://en.wikipedia.org/w/index.php?title=Cartogram},
+  note = "[Online; accessed 7-May-2024]"
+}
 @Online{wiki:ConcreteCategory,
   author = {Wikipedia},
   title  = {Concrete category},
